force-app/main/default/objects/Test_Property__c/Test_Property__c.object-meta.xml
<CustomObject>
    <label>Test Property</label>
    <nameField>
        <label>Address</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>