force-app/main/default/objects/Test_Property__c/fields/Date_Of_Last_Payment__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Last_Payment__c</fullName>
    <label>Date Of Last Payment</label>
    <type>Date</type>
</CustomField>