force-app/main/default/objects/Test_Property__c/fields/First_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Date__c</fullName>
    <label>First Payment Date</label>
    <type>Date</type>
</CustomField>