force-app/main/default/objects/Test_Property__c/fields/Lien_Position__c.field-meta.xml
<CustomField>
    <fullName>Lien_Position__c</fullName>
    <label>Lien Position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>