force-app/main/default/objects/Test_Property__c/fields/Line_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Line_Maturity_Date__c</fullName>
    <label>Line Maturity Date</label>
    <type>Date</type>
</CustomField>