force-app/main/default/objects/Test_Property__c/fields/Loan_Status__c.field-meta.xml
<CustomField>
    <fullName>Loan_Status__c</fullName>
    <label>Servicer Loan Status</label>
    <length>75</length>
    <type>Text</type>
</CustomField>