force-app/main/default/objects/Test_Property__c/fields/New_Line_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Line_Maturity_Date__c</fullName>
    <label>New Line Maturity Date</label>
    <type>Date</type>
</CustomField>