force-app/main/default/objects/Test_Property__c/fields/Next_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Due_Date__c</fullName>
    <label>Next Due Date</label>
    <type>Date</type>
</CustomField>