force-app/main/default/objects/Test_Property__c/fields/Original_UPB__c.field-meta.xml
<CustomField>
    <fullName>Original_UPB__c</fullName>
    <label>Original UPB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>