force-app/main/default/objects/Test_Property__c/fields/P_I__c.field-meta.xml
<CustomField>
    <fullName>P_I__c</fullName>
    <label>P&amp;I</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>