force-app/main/default/objects/Test_Property__c/fields/Payoff_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Payoff_Received_Date__c</fullName>
    <label>Payoff Received Date</label>
    <type>Date</type>
</CustomField>