force-app/main/default/objects/Test_Property__c/fields/Reserve_Balance__c.field-meta.xml
<CustomField>
    <fullName>Reserve_Balance__c</fullName>
    <label>Reserve Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>