force-app/main/default/objects/Test_Property__c/fields/Servicer_Asset_Manager__c.field-meta.xml
<CustomField>
    <fullName>Servicer_Asset_Manager__c</fullName>
    <label>Servicer Asset Manager</label>
    <length>75</length>
    <type>Text</type>
</CustomField>