force-app/main/default/objects/Test_Property__c/fields/Servicer_Investor_Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>Servicer_Investor_Loan_Number__c</fullName>
    <label>Servicer Investor Loan Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>