force-app/main/default/objects/Test_Property__c/fields/Servicer_Name__c.field-meta.xml
<CustomField>
    <fullName>Servicer_Name__c</fullName>
    <label>Servicer Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Statebridge</fullName>
            </value>
            <value>
                <fullName>FCI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>